# micrograd_cxx

./: .gitignore  CMakeLists.txt  README.md  setup.sh
include/: Layer.h  Module.h  MultiLayerPerceptron.h  Neuron.h  Value.h
src/: Layer.cpp  MultiLayerPerceptron.cpp  Neuron.cpp  main.cpp  value.cpp
